--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.3",
-        "guzzle/guzzle": "2.5.*",
+        "guzzle/http": "2.8.*",
+        "guzzle/parser": "2.8.*",
         "react/socket": "0.1.*"
     },
     "autoload": {
