--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "target-dir": "React/Http",
     "extra": {
         "branch-alias": {
-            "dev-master": "0.2"
+            "dev-master": "0.2-dev"
         }
     }
 }
