--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
         "react/socket": "0.4.*"
     },
     "autoload": {
-        "psr-4": { "React\\Http\\": "" }
+        "psr-4": {
+            "React\\Http\\": "src"
+        }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.4-dev"
+            "dev-master": "0.5-dev"
         }
     }
 }
