--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "require": {
         "php": ">=5.4.0",
         "guzzle/parser": "~3.0",
-        "react/socket": "0.4.*"
+        "react/socket": "0.4.*",
+        "react/stream": "0.4.*",
+        "evenement/evenement": "~2.0"
     },
     "autoload": {
         "psr-4": {
