--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
         "branch-alias": {
             "dev-master": "0.5-dev"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.*"
     }
 }
