--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "guzzle/parser": "~3.0",
         "react/socket": "0.4.*",
         "react/stream": "0.4.*",
-        "evenement/evenement": "~2.0"
+        "evenement/evenement": "~2.0",
+        "symfony/http-foundation": "~2.5"
     },
     "autoload": {
         "psr-4": {
