--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "keywords": ["http"],
     "license": "MIT",
     "require": {
-        "php": ">=5.4.0",
-        "guzzlehttp/psr7": "^1.0",
+        "php": ">=5.3.0",
+        "ringcentral/psr7": "^1.0",
         "react/socket": "^0.4",
         "react/stream": "^0.4",
-        "evenement/evenement": "^2.0"
+        "evenement/evenement": "^2.0 || ^1.0"
     },
     "autoload": {
         "psr-4": {
