--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "guzzlehttp/psr7": "^1.0",
         "react/socket": "^0.4",
         "react/stream": "^0.4",
-        "evenement/evenement": "^2.0"
+        "evenement/evenement": "^2.0",
+        "react/promise": "^1.0|^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -19,5 +20,8 @@
         "branch-alias": {
             "dev-master": "0.5-dev"
         }
+    },
+    "require-dev": {
+        "clue/block-react": "^1.1"
     }
 }
