--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "react/socket": "^0.4",
         "react/stream": "^0.4",
         "evenement/evenement": "^2.0",
-        "react/promise": "^1.0|^2.0"
+        "react/promise": "^2.0 || ^1.1"
     },
     "autoload": {
         "psr-4": {
