--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "guzzlehttp/psr7": "^1.0",
         "react/socket": "^0.4",
         "react/stream": "^0.4",
-        "evenement/evenement": "^2.0"
+        "evenement/evenement": "^2.0",
+        "react/promise": "^2.0 || ^1.0"
     },
     "autoload": {
         "psr-4": {
