--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ before_script:
   - composer install --dev --prefer-source
   
 script:
-  - phpunit --coverage-text
+  - ./vendor/bin/phpunit --coverage-text
