--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         "psr-4": {
             "React\\Http\\": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.8"
     }
 }
