--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,8 @@ php:
   - 7
   - hhvm
 
-matrix:
-  allow_failures:
-    - php: 7
-    - php: hhvm
-
-before_script:
-  - composer install --dev --prefer-source
+install:
+  - composer install --no-interaction
   
 script:
   - ./vendor/bin/phpunit --coverage-text
