--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ringcentral/psr7": "^1.2",
         "react/socket": "^0.5",
         "react/stream": "^0.6 || ^0.5 || ^0.4.4",
+        "react/promise": "^2.0 || ^1.1",
         "evenement/evenement": "^2.0 || ^1.0"
     },
     "autoload": {
