--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.10||^5.0"
+        "phpunit/phpunit": "^4.8.10||^5.0",
+        "react/socket-client": "^0.6"
     }
 }
