--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.10||^5.0",
-        "react/socket": "^0.7"
+        "react/socket": "^0.7",
+        "clue/block-react": "^1.1"
     }
 }
