--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ php:
   - 5.5
   - 5.6
   - 7
-  - hhvm
 
+# also test against HHVM, but require "trusty" and ignore errors
+# also test lowest dependencies on PHP 5.3 and PHP 7
 matrix:
   include:
     - php: 5.3
@@ -16,6 +17,8 @@ matrix:
     - php: 7.0
       env:
         - DEPENDENCIES=lowest
+    - php: hhvm
+      dist: trusty
   allow_failures:
     - php: hhvm
 
