--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8.35 || ^5.7",
-        "clue/block-react": "^1.1"
+        "clue/block-react": "^1.1",
+        "phpunit/phpunit": "^6.4 || ^5.7 || ^4.8.35"
     }
 }
