--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "require": {
         "php": ">=5.3.0",
         "ringcentral/psr7": "^1.2",
-        "react/socket": "^1.0 || ^0.8 || ^0.7 || ^0.6 || ^0.5",
-        "react/stream": "^1.0 || ^0.7 || ^0.6 || ^0.5 || ^0.4.6",
+        "react/socket": "^1.0 || ^0.8.3",
+        "react/stream": "^1.0 || ^0.7.1",
         "react/promise": "^2.3 || ^1.2.1",
         "evenement/evenement": "^3.0 || ^2.0 || ^1.0",
         "react/promise-stream": "^0.1.1"
@@ -19,7 +19,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.10||^5.0",
-        "react/socket": "^1.0 || ^0.8 || ^0.7",
         "clue/block-react": "^1.1"
     }
 }
