Run tests on PHP 7.3 and 7.4 on Travis
Most of these changes have been based on https://github.com/reactphp/stream/pull/147

Additionally some changes have been made to ensure chunked encoding
works on PHP 7.4.

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
     },
     "require-dev": {
         "clue/block-react": "^1.1",
-        "phpunit/phpunit": "^6.4 || ^5.7 || ^4.8.35"
+        "phpunit/phpunit": "^7.0 || ^6.4 || ^5.7 || ^4.8.35"
     }
 }
