--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,25 @@
 language: php
 
-php:
-# - 5.3 # requires old distro, see below
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - 7.1
-  - 7.2
-  - hhvm # ignore errors, see below
-
 # lock distro so new future defaults will not break the build
 dist: trusty
 
-# also test lowest dependencies on PHP 7
 matrix:
   include:
     - php: 5.3
       dist: precise
+    - php: 5.4
+    - php: 5.5
+    - php: 5.6
     - php: 7.0
-      env:
-        - DEPENDENCIES=lowest
+    - php: 7.1
+    - php: 7.2
+    - php: 7.3
+    - php: 7.4
+    - php: hhvm-3.18
+      install:
+        - composer require phpunit/phpunit:^5 --dev --no-interaction # requires legacy phpunit
   allow_failures:
-    - php: hhvm
-
-sudo: false
+    - php: hhvm-3.18
 
 install:
   - composer install --no-interaction
