--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ matrix:
     - php: 7.2
     - php: 7.3
     - php: 7.4
-    - php: hhvm
+    - php: hhvm-3.18
   allow_failures:
-    - php: hhvm
+    - php: hhvm-3.18
 
 install:
   - composer install --no-interaction
