--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,21 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.0",
-        "ringcentral/psr7": "^1.2",
-        "react/socket": "^1.0 || ^0.8.3",
-        "react/stream": "^1.0 || ^0.7.1",
-        "react/promise": "^2.3 || ^1.2.1",
         "evenement/evenement": "^3.0 || ^2.0 || ^1.0",
-        "react/promise-stream": "^1.1"
+        "psr/http-message": "^1.0",
+        "react/event-loop": "^1.0 || ^0.5",
+        "react/http-client": "^0.5.10",
+        "react/promise": "^2.3 || ^1.2.1",
+        "react/promise-stream": "^1.1",
+        "react/socket": "^1.1",
+        "react/stream": "^1.0 || ^0.7.5",
+        "ringcentral/psr7": "^1.2"
     },
     "require-dev": {
         "clue/block-react": "^1.1",
+        "clue/http-proxy-react": "^1.3",
+        "clue/reactphp-ssh-proxy": "^1.0",
+        "clue/socks-react": "^1.0",
         "phpunit/phpunit": "^9.0 || ^5.7 || ^4.8.35"
     },
     "autoload": {
