--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,28 @@
     "description": "Event-driven, streaming plaintext HTTP and secure HTTPS server for ReactPHP",
     "keywords": ["event-driven", "streaming", "HTTP", "HTTPS", "server", "ReactPHP"],
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Christian Lück",
+            "homepage": "https://clue.engineering/",
+            "email": "christian@clue.engineering"
+        },
+        {
+            "name": "Cees-Jan Kiewiet",
+            "homepage": "https://wyrihaximus.net/",
+            "email": "reactphp@ceesjankiewiet.nl"
+        },
+        {
+            "name": "Jan Sorgalla",
+            "homepage": "https://sorgalla.com/",
+            "email": "jsorgalla@gmail.com"
+        },
+        {
+            "name": "Chris Boden",
+            "homepage": "https://cboden.dev/",
+            "email": "cboden@gmail.com"
+        }
+    ],
     "require": {
         "php": ">=5.3.0",
         "ringcentral/psr7": "^1.2",
