Introduce using PSR-7 HTTP Status code constants
Introducing using these constants makes it easier to identify a
specific HTTP status used in our code. And for our users to use
readable status codes in their own code.

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "react/promise-stream": "^1.1",
         "react/socket": "^1.6",
         "react/stream": "^1.1",
-        "ringcentral/psr7": "^1.2"
+        "ringcentral/psr7": "^1.2",
+        "fig/http-message-util": "^1.1"
     },
     "require-dev": {
         "clue/block-react": "^1.1",
