--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,11 @@
         "php": ">=5.3.0",
         "evenement/evenement": "^3.0 || ^2.0 || ^1.0",
         "psr/http-message": "^1.0",
-        "react/dns": "dev-default-loop#28e5df1 as 1.8.0",
-        "react/event-loop": "dev-master#78f7f43 as 1.2.0",
+        "react/event-loop": "^1.2",
         "react/promise": "^2.3 || ^1.2.1",
         "react/promise-stream": "^1.1",
-        "react/socket": "dev-default-loop#b471dc7 as 1.8.0",
-        "react/stream": "dev-default-loop#e617d63 as 1.2.0",
+        "react/socket": "^1.8",
+        "react/stream": "^1.2",
         "ringcentral/psr7": "^1.2"
     },
     "require-dev": {
@@ -49,19 +48,5 @@
     },
     "autoload-dev": {
         "psr-4": { "React\\Tests\\Http\\": "tests" }
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/clue-labs/dns"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/clue-labs/socket"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/clue-labs/stream"
-        }
-    ]
+    }
 }
