--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,14 @@
     "require": {
         "php": ">=5.3.0",
         "evenement/evenement": "^3.0 || ^2.0 || ^1.0",
+        "fig/http-message-util": "^1.1",
         "psr/http-message": "^1.0",
         "react/event-loop": "^1.2",
         "react/promise": "^2.3 || ^1.2.1",
         "react/promise-stream": "^1.1",
         "react/socket": "^1.9",
         "react/stream": "^1.2",
-        "ringcentral/psr7": "^1.2",
-        "fig/http-message-util": "^1.1"
+        "ringcentral/psr7": "^1.2"
     },
     "require-dev": {
         "clue/block-react": "^1.1",
