Removed obsolete RingCentral/Psr7 dependency

--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,7 @@
         "react/event-loop": "^1.2",
         "react/promise": "^3 || ^2.3 || ^1.2.1",
         "react/socket": "^1.12",
-        "react/stream": "^1.2",
-        "ringcentral/psr7": "^1.2"
+        "react/stream": "^1.2"
     },
     "require-dev": {
         "clue/http-proxy-react": "^1.8",
